fix: harden Journey AI response validation