@@ -3,6 +3,8 @@ package com.ddarungflow.journey.ai;
 import java.time.OffsetDateTime;
 import java.util.List;
 import java.util.Map;
+import java.util.Collections;
+import java.util.LinkedHashMap;
 
 public record JourneyIntent(
         PlaceReference origin,
@@ -17,7 +19,7 @@ public record JourneyIntent(
 ) {
     public JourneyIntent {
         preferences = preferences == null ? Map.of() : Map.copyOf(preferences);
-        hardConstraints = hardConstraints == null ? Map.of() : Map.copyOf(hardConstraints);
+        hardConstraints = hardConstraints == null ? Map.of() : Collections.unmodifiableMap(new LinkedHashMap<>(hardConstraints));
         missingFields = missingFields == null ? List.of() : List.copyOf(missingFields);
         if (requiredBikeCount != null && (requiredBikeCount < 1 || requiredBikeCount > 5)) {
             throw new JourneyAiException(JourneyAiErrorCode.AI_OUTPUT_SCHEMA_INVALID, "requiredBikeCount must be between 1 and 5");
